service.yml
apiVersion: v1
kind: Service
metadata:
  name: reddit-clone-service
spec:
  type: NodePort
  selector:
    app: reddit-clone
  ports:
  - port: 3000
    targetPort: 3000
    nodePort: 32000   # You can change this (range: 30000–32767)
    protocol: TCP
